feat: filter paid and unpaid transaction
