# apps/api/domain/transactions/repository.go
@@ -7,8 +7,8 @@ import (
 
 type Repository interface {
 	BeginTransaction(ctx context.Context, callback func(ctxWithTx context.Context) error) error
-	GetTransactionList(ctx context.Context, query string, sortBy string, order string, skip int, limit int) ([]Transaction, error)
-	GetTransactionListTotal(ctx context.Context, query string) (int64, error)
+	GetTransactionList(ctx context.Context, query string, sortBy string, order string, skip int, limit int, paymentStatus PaymentStatus) ([]Transaction, error)
+	GetTransactionListTotal(ctx context.Context, query string, paymentStatus PaymentStatus) (int64, error)
 	GetTransactionById(ctx context.Context, id int64) (Transaction, error)
 	CreateTransaction(ctx context.Context, transaction *Transaction) error
 	UpdateTransactionById(ctx context.Context, transaction *Transaction, id int64) error
